tools/flowc/tests/errors/error34.flow
CommonStyle ::= Style1, Style2;
    Style1 : ();
    Style2 : ();
SuperStyle ::= CommonStyle, Style3;
    Style3 : ();

A : (
  styles : [SuperStyle]
);

B : (
  styles : [CommonStyle]
);

getCommonStyles(styles : [CommonStyle], a : A, b : B) -> [[CommonStyle]] {
  [styles, a.styles, b.styles]
}

main() {

}
